--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,3 +6,10 @@ on:
         required: true
         type: string
         default: ''
+jobs:
+  updateVersionFile:
+  steps:
+    - name: Update File
+      run: java -Dfile.encoding=UTF-8 -jar modpackUpdater.jar
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v5
