--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,6 +10,10 @@ jobs:
   updateVersionFile:
     runs-on: [ubuntu-latest]
     steps:
+      - uses: actions/setup-java@v3
+        with:
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '17'
       - name: Output dir
         run: ls
       - name: Update File
