--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -10,6 +10,9 @@ jobs:
   updateVersionFile:
     runs-on: [ubuntu-latest]
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin' # See 'Supported distributions' for available options
