--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,3 +25,5 @@ jobs:
           VERSION: ${{ inputs.version }}
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
