--- a/.github/workflows/changelog-updated.yml
+++ b/.github/workflows/changelog-updated.yml
@@ -10,4 +10,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Print new contents
-        run: echo "New comment contents: ${{ github.event.comment.body }}"
+        run: echo "New comment contents ${{ github.event.comment.body }}"
