--- a/.github/workflows/changelog-updated.yml
+++ b/.github/workflows/changelog-updated.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Fetch and merge changes
         run: |
-          git fetch origin/${{ github.head_ref }}
+          git fetch origin
           git merge origin/${{ github.head_ref }}
       - name: Print new contents
         run: |
