--- a/.github/workflows/changelog-updated.yml
+++ b/.github/workflows/changelog-updated.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Fetch and merge changes
         run: |
           git fetch origin
-          git merge origin/${{ github.head_ref }}
+        #  git merge origin/${{ github.head_ref }} --allow-unrelated-histories
       - name: Print new contents
         run: |
           echo "${{ github.event.pull_request.body }}" >> contents.txt
